feat(webapp): app authorizations
- cockpit & tasklist: deny access to users who are not authorized to
  access these applications

related to #CAM-1043

--- a/client/templates/navigation.html
+++ b/client/templates/navigation.html
@@ -34,7 +34,7 @@
         <li>
           <a ng-href="{{ '../../admin/:engine/' | uri }}">Admin</a>
         </li>
-        <li>
+        <li ng-show="authentication.isTasklistAuthorized()">
           <a ng-href="{{ '../../tasklist/:engine/' | uri }}">Tasklist</a>
         </li>
       </ul>
