--- a/client/templates/navigation.html
+++ b/client/templates/navigation.html
@@ -42,10 +42,10 @@
       </a>
 
       <ul class="dropdown-menu">
-        <li>
+        <li ng-show="authentication.isCockpitAuthorized()">
           <a ng-href="{{ '../../cockpit/:engine/' | uri }}">Cockpit</a>
         </li>
-        <li>
+        <li ng-show="authentication.isTasklistAuthorized()">
           <a ng-href="{{ '../../tasklist/:engine/' | uri }}">Tasklist</a>
         </li>
       </ul>
