feat(webapp): app authorizations
- cockpit & tasklist: deny access to users who are not authorized to
  access these applications

related to #CAM-1043

--- a/client/webapp/src/main/webapp/app/tasklist/templates/navigation.html
+++ b/client/webapp/src/main/webapp/app/tasklist/templates/navigation.html
@@ -32,7 +32,7 @@
       </a>
 
       <ul class="dropdown-menu">
-        <li>
+        <li ng-show="authentication.isCockpitAuthorized()">
           <a ng-href="{{ '../../cockpit/:engine/' | uri }}">Cockpit</a>
         </li>
         <li>
