feat(webapp): manage authorizations
- add support for managing authorizations in Admin
- expose Permissions as Strings in REST API

related to #CAM-1041

--- a/client/templates/navigation.html
+++ b/client/templates/navigation.html
@@ -8,6 +8,10 @@
     <li class="dropdown" ng-class="activeClass('#/group')">
       <a href="#/groups">Groups</a>
     </li>
+
+    <li class="dropdown" ng-class="activeClass('#/authorization')">
+      <a href="#/authorization?resource=0">Authorizations</a>
+    </li>
   </ul>
 
   <ul class="nav pull-right" ng-controller="AuthenticationController">
