feat(webapp): manage authorizations
- add support for managing authorizations in Admin
- expose Permissions as Strings in REST API

related to #CAM-1041

--- a/client/webapp/src/main/webapp/assets/css/common.css
+++ b/client/webapp/src/main/webapp/assets/css/common.css
@@ -49,6 +49,16 @@ form.inline-edit {
   right: 0px;
 }
 
+/** ---- in-place editing ----**/
+
+.in-place-edit {
+  width: 100%;
+}
+
+textarea.in-place-edit {
+  resize: vertical;
+}
+
 /** help system */
 .help-toggle {
   display: inline-block;
@@ -337,3 +347,4 @@ input.ng-invalid {
   margin-bottom: 15px;
   padding: 7px 9px;
 }
+
