--- a/client/webapp/src/main/webapp/assets/css/admin/app.css
+++ b/client/webapp/src/main/webapp/assets/css/admin/app.css
@@ -22,3 +22,25 @@
 .controls .help-inline {
   color: #b94a48;
 }
+
+td .select-auth-type {
+  width:95px;
+}
+
+.input-auth-name {
+  width: 140px;
+}
+
+div.auth-box {
+  min-width: 720px;
+}
+
+a.select-identity-type {
+  width: 50px;
+}
+
+span.permissions-editor {
+  color: rgb(85, 85, 85);
+  cursor: auto;
+  background-color: #ffffff;
+}
