chore(merge): merge from upstream

--- a/client/webapp/src/main/webapp/assets/css/common.css
+++ b/client/webapp/src/main/webapp/assets/css/common.css
@@ -118,13 +118,12 @@ html, body {
 /**
  * form styling
  */
-form input.ng-dirty.ng-invalid {
-  background-color: #FFDEDE;
-  color: #000;
-}
 
-input.ng-invalid-required {
-  border-color: #f00;
+input.ng-invalid.ng-dirty {
+  border-color: #E9322D;
+  -webkit-box-shadow: 0 0 6px #F8B9B7;
+  -moz-box-shadow: 0 0 6px #f8b9b7;
+  box-shadow: 0 0 6px #F8B9B7;
 }
 
 .modal-body {
@@ -294,17 +293,6 @@ footer .version {
 
 .navbar-search select {
   margin-bottom: 4px;
-}
-
-input:focus.ng-invalid {
-  border-color: #e9322d;
-  -webkit-box-shadow: 0 0 6px #f8b9b7;
-  -moz-box-shadow: 0 0 6px #f8b9b7;
-  box-shadow: 0 0 6px #f8b9b7;
-}
-
-input.ng-invalid {
-  border-color: #e9322d;
 }
 
 /** end input tweaks */
