feat(cockpit.procDef): add process instance filter
Closes CAM-1061, CAM-911, CAM-784

--- a/client/webapp/src/main/webapp/assets/css/cockpit/app.css
+++ b/client/webapp/src/main/webapp/assets/css/cockpit/app.css
@@ -328,6 +328,12 @@ a.expand-collapse:focus {
   position: relative;
 }
 
+.filter .search.search-text {
+  padding-right: 25px;
+  line-height: 20px;
+  margin-bottom: 5px;
+}
+
 .filter .search .remove {
   position: absolute;
   height: 26px;
