--- a/client/webapp/src/main/webapp/plugin/base/app/views/processInstance/incidents-tab.html
+++ b/client/webapp/src/main/webapp/plugin/base/app/views/processInstance/incidents-tab.html
@@ -43,7 +43,7 @@
       </td>
       <td>
         <span ng-show="incident.linkable">
-          <a href ng-click="selectActivity(incident)">
+          <a href="#/process-definition/{{ processInstance.definitionId }}/process-instance/{{ processInstance.id }}?bpmnElements={{ incident.activityId }}">
             {{ incident.activityName }}
           </a>
         </span>
