chore(queryParams): Adjust query parameter in uri
related to CAM-1050

--- a/client/webapp/src/main/webapp/plugin/base/app/views/processInstance/variable-instances-tab.html
+++ b/client/webapp/src/main/webapp/plugin/base/app/views/processInstance/variable-instances-tab.html
@@ -84,7 +84,7 @@
         {{ variable.type }}
       </td>
       <td>
-        <a href="#/process-definition/{{ processInstance.definitionId }}/process-instance/{{ processInstance.id }}?activityInstances={{ variable.instance.id }}" title="{{ variable.instance.id }}">
+        <a href="#/process-definition/{{ processInstance.definitionId }}/process-instance/{{ processInstance.id }}?activityInstanceIds={{ variable.instance.id }}" title="{{ variable.instance.id }}">
           {{ variable.instance.name }}
         </a>
       </td>
