--- a/client/webapp/src/main/webapp/plugin/base/app/views/processInstance/called-process-instance-table.html
+++ b/client/webapp/src/main/webapp/plugin/base/app/views/processInstance/called-process-instance-table.html
@@ -17,7 +17,7 @@
         </a>
       </td>
       <td>
-        <a href="#/process-definition/{{ processInstance.definitionId }}/process-instance/{{ processInstance.id }}?activityInstances={{ calledProcessInstance.instance.id }}">
+        <a href="#/process-definition/{{ processInstance.definitionId }}/process-instance/{{ processInstance.id }}?activityInstanceIds={{ calledProcessInstance.instance.id }}">
           {{ calledProcessInstance.instance.name }}
         <a>
       </td>
