fix(cockpit): rename dashboard plugins
-- rename dashboard plugins to Deployed Processes (List) and Deployed
Processes (Icons)

-- add state circles to tiles view in dashboard

Closes; #CAM-1101

--- a/client/webapp/src/main/webapp/assets/css/common.css
+++ b/client/webapp/src/main/webapp/assets/css/common.css
@@ -178,6 +178,11 @@ Icons
   background-color: #468847;
 }
 
+.circle-tiles {
+  float: right;
+  margin-top: 5px;
+}
+
 /**
 Utilities
 **/
@@ -334,10 +339,5 @@ footer .version {
   height: auto;
   margin-bottom: 15px;
   padding: 7px 9px;
-}
-
-.placeholder
-{
-  color: #aaa;
 }
 
