fix(cockpit): fix highlighting problem in IE
Closes: #CAM-950

--- a/client/webapp/src/main/webapp/assets/css/cockpit/app.css
+++ b/client/webapp/src/main/webapp/assets/css/cockpit/app.css
@@ -46,6 +46,11 @@ Tree
   position: absolute;
 }
 
+/* IE Highlight Fix */
+.bpmnElement {
+  background-color: rgba(255,255,255,0);
+}
+
 /** ---- sidebar ----**/
 
 a.expand-collapse {
