feat(variable): Add variable to process instance
- Now it is possible to add a new variable to process instance.
- Therefore a dialog exists, which can be triggered via a button in the
  toolbar inside the process instance view.

- Implements a new directive called 'variable', which handles the input
  fields to add/edit a variable

- null variables can be added too now

related to CAM-1082, CAM-1115

--- a/client/webapp/src/main/webapp/assets/css/common.css
+++ b/client/webapp/src/main/webapp/assets/css/common.css
@@ -33,7 +33,7 @@ form.inline-edit {
   margin-bottom: 35px;
 }
 
-.inline-edit input {
+.inline-edit input:not([type=radio]) {
   min-height: 30px;
 }
 
@@ -162,12 +162,15 @@ Icons
 -------------------**/
 
 .circle {
-  border-radius: 50%;
   width: 20px;
   height: 20px;
   background-color: #999999;
   top: 100%;
   float: left;
+
+  -webkit-border-radius: 50%;
+   -moz-border-radius: 50%;
+        border-radius: 50%;
 }
 
 .circle-red {
