--- a/client/webapp/src/main/webapp/plugin/base/app/views/processInstance/variable-instances-tab.html
+++ b/client/webapp/src/main/webapp/plugin/base/app/views/processInstance/variable-instances-tab.html
@@ -1,18 +1,18 @@
 <table class="table table-bordered table-hover table-condensed">
   <thead>
     <tr>
-      <th>Name</th>
-      <th>Value</th>
-      <th>Type</th>
-      <th>Scope</th>
+      <th class="variable-name">Name</th>
+      <th class="variable-value">Value</th>
+      <th class="variable-type">Type</th>
+      <th class="variable-scope">Scope</th>
     </tr>
   </thead>
   <tbody>
     <tr ng-repeat="variable in variables">
-      <td>
+      <td class="variable-name">
         {{ variable.name }}
       </td>
-      <td>
+      <td class="variable-value">
 
         <div ng-if="!isInEditMode(variable)">
           {{ variable.value }}
@@ -21,46 +21,21 @@
           </span>
         </div>
 
-        <form ng-if="isInEditMode(variable)" ng-submit="submit(variable)" novalidate name="editVariableForm" class="inline-edit">
+        <form ng-if="isInEditMode(variable)" ng-submit="submit(variable, this.editVariableForm)" novalidate name="editVariableForm" class="inline-edit">
 
           <fieldset>
-            <!-- handle boolean values -->
-            <div ng-if="isBoolean(variable)">
-              <label>
-                <input ng-model="getCopy(variable.id).value" ng-value="true" type="radio" name="boolean-value">
-                <span>true</span>
-              </label>
-              <label>
-                <input ng-model="getCopy(variable.id).value" ng-value="false" type="radio" name="boolean-value">
-                <span>false</span>
-              </label>                            
-            </div>
-            <!-- handle integer/short/long values -->
-            <input ng-if="isInteger(variable) || isShort(variable) || isLong(variable)" name="editIntegerValue" type="text"  
-                   numeric integer="true" ng-model="getCopy(variable.id).value" class="in-place-edit" autofocus>
-            
-            <!-- handle double/float values -->
-            <input ng-if="isDouble(variable) || isFloat(variable)" name="editFloatValue" type="text" 
-                   numeric ng-model="getCopy(variable.id).value" class="in-place-edit input" autofocus>
+          
+            <div variable="getCopy(variable.id)" inline-edit autofocus></div>
 
-            <!-- handle string values -->
-            <textarea ng-if="isString(variable) || isNull(variable)" rows="5" class="in-place-edit" ng-model="getCopy(variable.id).value" autofocus></textarea>
-
-            <!-- handle date values -->
-            <input ng-if="isDate(variable)" date name="editDateValue" ng-model="getCopy(variable.id).value" class="in-place-edit" type="text" autofocus>
-            
           </fieldset>
 
           <div class="inline-edit-footer">
 
-            <p class="variable-invalid" ng-show="editVariableForm.editDateValue.$error.date">
+            <p class="variable-invalid" ng-show="this.editVariableForm.editDateValue.$error.date">
               Invalid date: The date should have the pattern 'yyyy-MM-ddTHH:mm:ss'.
             </p>
-            <p class="variable-invalid" ng-show="editVariableForm.editFloatValue.$error.numeric">
-              Invalid value: Only a float value is allowed.
-            </p>
-            <p class="variable-invalid" ng-show="editVariableForm.editIntegerValue.$error.numeric">
-              Invalid value: Only an integer value is allowed.
+            <p class="variable-invalid" ng-show="this.editVariableForm.editIntegerValue.$error.numeric || this.editVariableForm.editFloatValue.$error.numeric">
+              Invalid value: Only a {{ variable.type }} value is allowed.
             </p>
 
             <p class="variable-invalid" ng-show="getExceptionForVariableId(variable.id)">
@@ -68,7 +43,7 @@
             </p>
 
             <div class="btn-group">
-              <button type="submit" class="btn btn-primary" ng-disabled="editVariableForm.$invalid" request-aware="editVariableForm">
+              <button type="submit" class="btn btn-primary" ng-disabled="!isValid(this.editVariableForm)" request-aware="this.editVariableForm">
                 <i class="icon-ok icon-white"></i>
               </button>
               <button type="button" class="btn" ng-click="closeInPlaceEditing(variable)">
@@ -80,10 +55,14 @@
         </form>
         
       </td>
-      <td>
-        {{ variable.type }}
+      <td class="variable-type">
+        <select ng-show="isInEditMode(variable) && isNull(variable)" name="variableType"
+                ng-options="variableType for variableType in variableTypes" ng-model="getCopy(variable.id).type"
+                class="select-variable-type">
+        </select>
+        <span ng-hide="isInEditMode(variable) && isNull(variable)">{{ variable.type }}</span>       
       </td>
-      <td>
+      <td class="variable-scope">
         <a href="#/process-definition/{{ processInstance.definitionId }}/process-instance/{{ processInstance.id }}?activityInstanceIds={{ variable.instance.id }}" title="{{ variable.instance.id }}">
           {{ variable.instance.name }}
         </a>
