--- a/client/webapp/src/main/webapp/plugin/base/app/views/processInstance/variable-instances-tab.html
+++ b/client/webapp/src/main/webapp/plugin/base/app/views/processInstance/variable-instances-tab.html
@@ -56,11 +56,11 @@
         
       </td>
       <td class="variable-type">
-        <select ng-show="isInEditMode(variable) && isNull(variable)" name="variableType"
+        <select ng-show="isInEditMode(variable)" name="variableType"
                 ng-options="variableType for variableType in variableTypes" ng-model="getCopy(variable.id).type"
                 class="select-variable-type">
         </select>
-        <span ng-hide="isInEditMode(variable) && isNull(variable)">{{ variable.type }}</span>       
+        <span ng-hide="isInEditMode(variable)">{{ variable.type }}</span>       
       </td>
       <td class="variable-scope">
         <a href="#/process-definition/{{ processInstance.definitionId }}/process-instance/{{ processInstance.id }}?activityInstanceIds={{ variable.instance.id }}" title="{{ variable.instance.id }}">
