--- a/client/webapp/src/main/webapp/assets/css/common.css
+++ b/client/webapp/src/main/webapp/assets/css/common.css
@@ -270,16 +270,16 @@ footer .version {
 @media (min-width: 979px) {
   .ctn-wrapper > .notifications-panel {
     position: fixed;
-    top: 90px;
-    left: 80px;
-    right: 80px;
+    top: 80px;
+    right: 50px;
+    width: 400px;
     z-index: 10;
+    background: rgba(255, 255, 255, 0.7);
+    border-radius: 10px;
   }
 
   .ctn-wrapper > .notifications-panel .alert {
-    -moz-box-shadow: 0 0 8px #888;
-    -webkit-box-shadow: 0 0 8px #888;
-    box-shadow: 0 0 8px #888;
+    margin: 20px;
   }
 
   .breadcrumb {
