chore(link): Change deeplink to process instance
- change deeplink for a process instance from
  '#/process-definition/:anId/process-instance/:aProcessInstance" to
  '#/process-instance/:aProcessInstance"

related to CAM-1051

--- a/client/webapp/src/main/webapp/plugin/base/app/views/processInstance/variable-instances-tab.html
+++ b/client/webapp/src/main/webapp/plugin/base/app/views/processInstance/variable-instances-tab.html
@@ -63,7 +63,7 @@
         <span ng-hide="isInEditMode(variable)">{{ variable.type }}</span>       
       </td>
       <td class="variable-scope">
-        <a href="#/process-definition/{{ processInstance.definitionId }}/process-instance/{{ processInstance.id }}?activityInstanceIds={{ variable.instance.id }}" title="{{ variable.instance.id }}">
+        <a href="#/process-instance/{{ processInstance.id }}?activityInstanceIds={{ variable.instance.id }}" title="{{ variable.instance.id }}">
           {{ variable.instance.name }}
         </a>
       </td>
