fix(request-aware): simplify directive
- put request-aware directive on any form to make it work based on
active
  requests in the application.
- if you would like to trigger the load status manually, you may specify

     <form name="someForm" request-aware="manual"></form>

  you would need to update the form status via
scope.someForm.$load.start()
  and scope.someForm.$load.finish().

Related to CAM-1055

--- a/client/webapp/src/main/webapp/plugin/base/app/views/processInstance/variable-instances-tab.html
+++ b/client/webapp/src/main/webapp/plugin/base/app/views/processInstance/variable-instances-tab.html
@@ -21,7 +21,7 @@
           </span>
         </div>
 
-        <form ng-if="isInEditMode(variable)" ng-submit="submit(variable, this.editVariableForm)" novalidate name="editVariableForm" class="inline-edit">
+        <form class="inline-edit" name="editVariableForm" ng-if="isInEditMode(variable)" ng-submit="submit(variable, this.editVariableForm)" novalidate request-aware>
 
           <fieldset>
           
@@ -43,7 +43,7 @@
             </p>
 
             <div class="btn-group">
-              <button type="submit" class="btn btn-primary" ng-disabled="!isValid(this.editVariableForm)" request-aware="this.editVariableForm">
+              <button type="submit" class="btn btn-primary" ng-disabled="!isValid(this.editVariableForm)">
                 <i class="icon-ok icon-white"></i>
               </button>
               <button type="button" class="btn" ng-click="closeInPlaceEditing(variable)">
