fix(cockpit/processvars): remove spaces from variable expressions
- variables NAME OP VALUE will now be parsed without a mandatory space
in
  between the parts. Only difference: the like operator still needs to
be
  surrounded by spaces so that it can be distinguished from parts of a
variable

- variables are deserialized to the non-space form, too

Closes CAM-1126

--- a/client/webapp/src/main/webapp/assets/css/cockpit/app.css
+++ b/client/webapp/src/main/webapp/assets/css/cockpit/app.css
@@ -360,6 +360,10 @@ a.expand-collapse:focus {
   font-size: 0.83em;
 }
 
+.filters .note-error {
+  color: #D12020;
+}
+
 .filters .note code {
   padding: 0;
   color: inherit;
