--- a/client/webapp/src/main/webapp/plugin/base/app/views/processInstance/variable-instances-tab.html
+++ b/client/webapp/src/main/webapp/plugin/base/app/views/processInstance/variable-instances-tab.html
@@ -14,7 +14,6 @@
       </td>
       <td class="variable-value">
 
-        <!-- <div ng-if="!isInEditMode(variable)"> -->
         <div ng-if="!variable.inEditMode">
           {{ variable.value }}
           <span ng-if="!isSerializable(variable)" class="edit-toggle" ng-click="editVariable(variable)">
@@ -57,11 +56,11 @@
         
       </td>
       <td class="variable-type">
-        <select ng-show="isInEditMode(variable)" name="variableType"
+        <select ng-show="variable.inEditMode" name="variableType"
                 ng-options="variableType for variableType in variableTypes" ng-model="getCopy(variable.id).type"
                 class="select-variable-type">
         </select>
-        <span ng-hide="isInEditMode(variable)">{{ variable.type }}</span>       
+        <span ng-hide="variable.inEditMode">{{ variable.type }}</span>       
       </td>
       <td class="variable-scope">
         <a href="#/process-instance/{{ processInstance.id }}?activityInstanceIds={{ variable.instance.id }}" title="{{ variable.instance.id }}">
