feat(tasklist/forms): add input extensions (form-field)
Rewrite the compilation of form fields in embedded task forms to
allow extensibility of form-field annotated form elements:

- All validation attributes such as ng-pattern, required, etc. get
  properly added to the resulting form input. This allows custom
  validation and pattern matching to take place.

- Outer form is exposed as `variablesForm` to the current scope.

- Validation state may be queried via
  variablesForm.{inputName}.($valid|$invalid), i.e. the following
  markup in an embedded form will show a validation error to the
  user unless `test` is put in:

  <input form-field type="string"
         required ng-pattern="/^test$/" name="testForm" />

  <p ng-if="variablesForm.testForm.$invalid">
    Need to type in <em>demo</em>.
  </p>

- Form submits only if validation state is $valid

Related to CAM-1322

--- a/client/webapp/src/main/webapp/assets/css/tasklist/app.css
+++ b/client/webapp/src/main/webapp/assets/css/tasklist/app.css
@@ -83,3 +83,16 @@ table .selected tr > td {
     margin-top: 30px;
   }
 }
+
+label.label-checkbox {
+  display: inline-block;
+  position: relative;
+  margin-bottom: 0;
+  vertical-align: top;
+  line-height: 30px;
+}
+
+label.label-checkbox input[type="checkbox"] {
+  margin: 8px 0 8px 10px;
+  padding-top: 0;
+}
