--- a/client/webapp/src/main/webapp/plugin/jobDefinition/app/views/processDefinition/job-definition-table.html
+++ b/client/webapp/src/main/webapp/plugin/jobDefinition/app/views/processDefinition/job-definition-table.html
@@ -25,10 +25,16 @@
         {{ jobDefinition.state }}
       </td>
       <td>
-        <a class="btn action-button" ng-click="openSuspensionStateDialog(jobDefinition)" ng-show="jobDefinition.suspended" title="Activate Job Definition">
+        <a class="btn action-button" ng-click="openSuspensionStateDialog(jobDefinition)" ng-show="jobDefinition.suspended"
+           help
+           help-text="Activate Job Definition"
+           help-placement="'left'">
           <i class="icon-play"></i>
         </a>
-        <a class="btn action-button" ng-click="openSuspensionStateDialog(jobDefinition)" ng-hide="jobDefinition.suspended" title="Suspend Job Definition">
+        <a class="btn action-button" ng-click="openSuspensionStateDialog(jobDefinition)" ng-hide="jobDefinition.suspended"
+           help
+           help-text="Suspend Job Definition"
+           help-placement="'left'">
           <i class="icon-suspended"></i>
         </a>        
       </td>
