chore(jobDef/cockpit): Show message if job definitions are not found
related to CAM-1469

--- a/client/webapp/src/main/webapp/plugin/jobDefinition/app/views/processDefinition/job-definition-table.html
+++ b/client/webapp/src/main/webapp/plugin/jobDefinition/app/views/processDefinition/job-definition-table.html
@@ -40,6 +40,12 @@
       </td>
     </tr>
 
+    <tr ng-if="jobDefinitions && !jobDefinitions.length">
+      <td colspan="5">
+        No job definitions matched by current filter.
+      </td>
+    </tr>
+
   </tbody>
 </table>
 
