chore(jobDef/Dialog): Provide help text to parameters
related to CAM-1469

--- a/client/webapp/src/main/webapp/assets/css/common.css
+++ b/client/webapp/src/main/webapp/assets/css/common.css
@@ -382,3 +382,8 @@ footer .version {
 .btn.action-button:first-child {
   padding: 0px 8px;
 }
+
+/*----------popover--------------*/
+.tooltip {
+  z-index: 1060;
+}
