feat(suspension/procDef): Suspend or activate a process definition
- It is possible to activate a suspended process definition via an action
  button (and vice versa)

related to CAM-1554

--- a/client/webapp/src/main/webapp/assets/css/cockpit/app.css
+++ b/client/webapp/src/main/webapp/assets/css/cockpit/app.css
@@ -269,6 +269,14 @@ a.expand-collapse:focus {
 
 .btn-control-link {
   padding: 0;
+  margin-left: 5px;
+}
+
+/**
+ * suspended action button
+ */
+.btn-toolbar.btn-suspend-action {
+  padding: 6px;
 }
 
 /**
