feat(icon-suspended): Provide suspended icon on ProcDef and ProcInst
- show suspended icon when process definition or process instance is
  suspended

related to CAM-1556

--- a/client/webapp/src/main/webapp/assets/css/cockpit/app.css
+++ b/client/webapp/src/main/webapp/assets/css/cockpit/app.css
@@ -475,3 +475,9 @@ textarea.variable-type-string {
   margin-left: 19px;
   margin-bottom: 10px;
 }
+
+/*----------- circle suspended ----------*/
+
+span.state-suspended {
+  padding-left: 9px;
+}
