feat(JobDef/Suspension): Show suspended job definitions on diagram
* JobDefinition SuspensionState:
  - if a process definition has suspended job definitions, those job
    definitions will be marked as suspended with a suspended badge on the
    diagram
  - If the process definition will be suspended, then existings job
    definitions will be marked as suspended on diagram.
  - it is possible to select an activity which has an active job
    definition.

* Plugin mechanism:
  - add the possibility to declare data plugins, which are providing user
    specified data without any view
  - with this data plugin it is possible to share data, without loading it
    twice
  - refactoring of the plugin services; add a new PluginProvider which
    will be used by the ViewsProvider and DataProvider to register and get
    plugin providers

* Refactorings (Dashboard/ProcessDefinition/ProcessInstance):
  - adjust other views which are now using the data plugin too
  - fix selection on process definition and instance view

related to CAM-1470, CAM-1555

--- a/client/webapp/src/main/webapp/assets/css/cockpit/app.css
+++ b/client/webapp/src/main/webapp/assets/css/cockpit/app.css
@@ -16,6 +16,8 @@ Tree
   -moz-box-shadow: 0px 0px 4px 4px rgba(30, 144, 255, 1);
   box-shadow: 0px 0px 4px 4px rgb(30, 144, 255);
   border-radius: 5px;
+
+  cursor: pointer;
 }
 
 .process-diagram {
@@ -31,11 +33,18 @@ Tree
   user-select: none;
 }
 
-.badge-position {
-  margin-left: -1.1em;
-  margin-top: -0.75em;
-  top: 100%;
+.badge-suspended {
   position: absolute;
+  right: -1.3em;
+  top: -0.85em;
+  padding-top: 1.5px;
+  padding-bottom: 1.5px;
+}
+
+.badge-activity-instance-statistics {
+   position: absolute;
+   left: -0.9em;
+   bottom: -0.65em
 }
 
 /* IE Highlight Fix */
